--- a/DuYi/if_for/index.html
+++ b/DuYi/if_for/index.html
@@ -52,16 +52,29 @@
             // }
                 //打印出100之内的质数
                 
-            for(var n = 2;n < 100;n++){
-                if(n / 2 == 1 || n / 3 == 1 || n / 5 == 1 || n / 7 == 1)
-                {
-                    document.write(n + " ");
-                }
-                else if(n % 2 !== 0 && n % 3 !== 0 && n % 5 !==0 && n % 7 !== 0){
-                    document.write(n + " ");
-                }
-            }
+            // for(var n = 2;n < 100;n++){
+            //     if(n / 2 == 1 || n / 3 == 1 || n / 5 == 1 || n / 7 == 1)
+            //     {
+            //         document.write(n + " ");
+            //     }
+            //     else if(n % 2 !== 0 && n % 3 !== 0 && n % 5 !==0 && n % 7 !== 0){
+            //         document.write(n + " ");
+            //     }
+            // }
+            //老师方法：
+                var count = 0;
+                for(var n = 2;n < 100;n++){
+                    for(var i = 1;i <= n;i++){
+                        if(n % i == 0){
+                            count++;
+                        }
+                    }
+                    if(count == 2){
+                        document.write(n + " ");
+                    }
+                    count = 0;
 
+                }
     </script>
 
        
