--- a/dailystudy/8.26/index.html
+++ b/dailystudy/8.26/index.html
@@ -77,12 +77,42 @@
 // console.log(isNaN(""))
 //Number 判断是否为数字
 
-var n = "abc";
-m = Number(n);
-console.log(m);
+// var n = "abc";
+// m = Number(n);
+// console.log(m);
+// alert(typeof(a));//undefined
+// alert(typeof(undefined));//undefined
+// alert(typeof(NaN));//number
+// alert(typeof(null));//object
 
 
 
+// var a = "123abc";
+// alert(typeof(+a));//number
+// alert(typeof(!!a));//boolean
+// alert(typeof(a + ""));//String
+
+
+
+// alert(1 == "1")//true
+// alert(NaN == NaN);//false
+
+// alert(NaN == undefined);//false
+
+// alert("11" + 11);//1111
+
+
+// alert(1 === "1");//false
+
+
+// alert(parseInt("123abc"))//123
+
+
+// var a = 123123.347589;
+// alert(a.toFixed(3));//123123.348
+
+
+// alert(typeof(typeof(a)))
 
 
     </script>
