--- a/dailystudy/8.26/baidushiit.html
+++ b/dailystudy/8.26/baidushiit.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+        /* //要求，子元素必须为行内元素 */
     div.sanjiaoxing{
         width:0px;
         height: 0px;
@@ -14,7 +15,7 @@
     }
     .father{
         display: block;
-        /* height: 100px; */
+        height: 100px;
         border: 1px red solid;
         text-align: center;
     }
@@ -27,9 +28,10 @@
     }
     .son{
         display: inline-block;
-        float: left;
         vertical-align: middle;
         width: 50%;
+        box-sizing: border-box;
+border: 1px red solid;
     }
     .clearfix{
         clear: both;
@@ -43,12 +45,57 @@
     </div>
     <div class="father">
         <div class="son">
-            什么什么什么
+            afwjoe叫我覅额阿吾提我
         </div>
-        <div style="width: 100px;height: 100px;float: left;border: 1px red solid;">
+        <!-- <div style="width: 100px;height: 100px;float: left;border: 1px red solid;">
 
         </div>
-        <div class="clearfix"></div>
+       
     </div>
+    <!-- <style>
+        html,body{
+            width: 100%;
+            height: 100%;
+        }
+   .box1{position: relative;
+        width:100%;
+        height:100%;
+        top:0;
+        left:0;
+        background-color:rgba(0,0,0,.7);}
+.box2{
+    position: absolute;
+     top:0;
+     left:0;
+     bottom:0;
+     right:0;
+     width:50%;
+     height:50%;
+     margin:auto;
+     background-color:red;}
+    </style> -->
+<!-- 
+    <style>
+    .box1{
+        width: 100px;
+        height: 100px;
+        justify-content:center;
+align-items:center;
+display:-webkit-flex;
+box-sizing: border-box;
+border: 1px red solid;
+    }
+    .box2{
+        width: 50px;
+        height: 50px;
+        box-sizing: border-box;
+border: 1px red solid;
+    }
+    </style>
+    <div class="box1">
+        <div class="box2">
+            awgweg
+        </div>
+    </div> -->
 </body>
 </html>
