--- a/dailystudy/8.31/index.html
+++ b/dailystudy/8.31/index.html
@@ -66,19 +66,58 @@
 //    4   写一个函数，实现斐波那契数列
 
 
-function feiBo(n){
-    var c
-        a = 0,
-        b = 1;
-    for(var i = 0;i < n;i++){
-        c = a + b;
-        a = b;
-        b = c;
-        document.write(c + " ");
-    }
+// function feiBo(n){
+//     var c
+//         a = 0,
+//         b = 1;
+//     for(var i = 0;i < n;i++){
+//         c = a + b;
+//         a = b;
+//         b = c;
+//         document.write(c + " ");
+//     }
     
-}
-feiBo(7);
+// }
+// feiBo(7);
+
+
+//   5  写一组函数，输入数字，逆反并且输出中文形式
+
+
+//     function shuZi(){
+//         var num = window.prompt("输入数字");
+//         var n = "";
+//         for(var i = num.length - 1;i >= 0;i--){
+//              n += zhongWen(num[i]);
+//         }
+//         document.write(n);
+
+//     }
+// shuZi();
+//     function zhongWen(target){
+//         switch(target){
+//             case "1" :
+//                 return "壹";
+//             case "2" :
+//                 return "贰";
+//             case "3" :
+//                 return "叁";
+//         }
+//     }
+
+//    递归函数
+
+
+    // function jc(n){
+    //     if(n == 1){
+    //         return 1;
+    //     }
+    //     return 2 * jc(n - 1);//每次都会把*号前面的数赋给自身，
+    // }
+  
+
+  //要求输入一串低于10位的数字，输出这串数字的中文大写
+
  </script>
 </body>
 </html>
