--- a/dailystudy/8.21/index.html
+++ b/dailystudy/8.21/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- 先看第一表达式转换成布尔值的结果，如果布尔值为真，那么他会看第二个表达式转换为布尔值的结果， -->
+    <!-- &&先看第一表达式转换成布尔值的结果，如果布尔值为真，那么他会看第二个表达式转换为布尔值的结果， -->
     <!-- 如果只有两个表达式的话，就可以返回该表达式的值了 -->
     <!-- 总结：从左至右看&&前后的表达式，遇到表达式的值装换为布尔值为真时，就看下一个表达式，直到遇到表达式转换为布尔值
     为假时，打印该表达式的结果（注意：不是打印布尔值），或者直到最后一个表达式，打印最后表达式的结果。 找假就返回-->
