--- a/dailystudy/9.5/bibao.html
+++ b/dailystudy/9.5/bibao.html
@@ -283,17 +283,19 @@
 // // console.log(result)
 
 
-function fun(n,o) {
-    console.log(o);// undefined
-        return {
-            fun:function(m) {
-                return fun(m,n);
-            }
-        };
-}
-var a = fun(0); a.fun(1);  a.fun(2);  a.fun(3);  
-var b = fun(0).fun(1).fun(2).fun(3);
-var c = fun(0).fun(1);  c.fun(2);  c.fun(3);
+// function fun(n,o) {
+//     console.log(o);// undefined
+//         return {
+//             fun:function(m) {
+//                 return fun(m,n);
+//             }
+//         };
+// }   //对象      //fun(1,2)            
+// var a = fun(0); 
+// console.log(a.fun(1)); 
+// //  a.fun(2);  a.fun(3);  
+// // var b = fun(0).fun(1).fun(2).fun(3);
+// // var c = fun(0).fun(1);  c.fun(2);  c.fun(3);
 
 
 
