--- a/dailystudy/9.15/call,apply.html
+++ b/dailystudy/9.15/call,apply.html
@@ -157,27 +157,91 @@
 
 
       //  3、
-    a = 100;
-    function demo(e){
-        function e(){};
-        arguments[0] = 2;
-        document.write(e);
-        if(a){
-            var b = 123;
-            function c(){
-                //猪都能做出来
-            }
-        }
-        var c;
-        a = 10;
-        var a;
-        document.write(c);
-        document.write(a);
-    }
-    var a ;
-    demo(1);
-    document.write(a);
-    document.write(f);
+    // a = 100;
+    // function demo(e){
+    //     function e(){};
+    //     arguments[0] = 2;
+    //     document.write(e);//2
+    //     if(a){
+    //         var b = 123;
+    //         function c(){
+    //             //猪都能做出来
+    //         }
+    //     }
+    //     var c;
+    //     a = 10;
+    //     var a;
+    //     document.write(c);//undefined
+    //     document.write(a);//10
+    // }
+    // var a ;
+    // demo(1);
+    // document.write(a);//100
+    // document.write(f);//undefined
+
+
+
+
+
+
+   //    4、
+//    var str = "abc";
+//    str += 1;
+//    var test = typeof(str);
+//    if(test.length == 6){
+//        test.sign = "typeof的返回结果可能是String";//undefined  //包装类
+//    }
+//     document.write(test.sign);//undefined
+
+
+
+
+
+
+
+//    5、
+    // function Person(name, age, sex) {
+    //     var a = 0;
+    //     this.name = name;
+    //     this.age = age;
+    //     this.sex = sex;
+    //     function sss() {
+    //         a++;
+    //         document.write(a);//1
+    //     }
+    //     this.say = sss;
+    // }
+    // var oPerson = new Person();
+    // oPerson.say();//1
+    // oPerson.say();//2
+    // var oPerson1 = new Person();
+    // oPerson1.say();//1
+
+
+
+
+
+
+     //     6、改为可以输出0-9的形式
+        // function bb() {
+        //         var arr = [];
+        //         for (var i = 0; i < 10; i++) {
+        //             arr[i] = function () {
+        //                 document.write(i);
+        //             }
+        //         }
+        //         return arr;
+        //     }
+        //     var arr1 = bb();
+        //     for (var i = 0; i < 10; i++) {
+        //         arr1[i]();
+        //     }
+
+
+
+
+
+
     </script>
 </body>
 </html>
