--- a/dailystudy/9.15/mingming.html
+++ b/dailystudy/9.15/mingming.html
@@ -148,12 +148,14 @@
 
 
 
-        function Ceshi(){
-            this.name = "ali";
-        }
-    var ceshi = new Ceshi();
-
-
+    //     function Ceshi(){
+    //         this.name = "ali";
+    //     }
+    // var ceshi = new Ceshi();
+    // var obj = {
+    //     shuxing: "li",
+    // }
+    // Ceshi.call(obj);
 
 
 
@@ -233,12 +235,28 @@
 
     //        A  instanceof B
 
-            // Object.prototype.toString = function(){
-            //     this.age = 1;
+            // function Father(){
+            //     this.name = "ali";
             // }
-    // obj.toString();
+            // function Son(){
+                
+            // }
+            // var father = new Father(); 
+            // Son.prototype = father;
+            // var son = new Son();
 
 
+
+                // a 未声明和定义    
+                // a 声明未定义
+
+                // var a = 1;
+                // if(typeof a!="undefined"){
+                //     console.log("a");
+                // }
+                // // if(a){
+                // //     console.log("a");
+                // // }
     </script>
 
 
