--- a/dailystudy/9.22/this.html
+++ b/dailystudy/9.22/this.html
@@ -238,27 +238,52 @@
                        } 
                        var obj1 = {};
                        function deepClone(origin,target){
-                           for(var prop in obj){
-                               if(obj.hasOwnProperty(prop)){ // 判断是否是对象本身的属性
-                                var arrStr = Object.prototype.toString,
-                                    arr = "[object Array]";
-                                   if(typeof(obj[prop] == "object")){// 判断是都是引用值
-                                        if(arr.call(obj[prop] = arr)){//是数组
-                                            var 
+                        var target = target || {},
+                            arrStr = Object.prototype.toString,
+                            arr = "[object Array]";
+                           for(var prop in origin){
+                               if(origin.hasOwnProperty(prop)){ // 判断是否是对象本身的属性
+                                   if(origin[prop] !== "null" && typeof(origin[prop]) == "object"){// 判断是都是引用值
+                                        if(arrStr.call(origin[prop]) == arr){//是数组
+                                            target[prop] = [];
                                         }else{//是对象执行
-
+                                            target[prop] = {};
                                         }
+                                        deepClone(origin[prop],target[prop])
                                    }else{
                                        target[prop] = origin[prop];
                                    }
                                }
                            }
+                           return target;
                        }
+                       deepClone(obj,obj1);
                         // 遍历对象
                         //  1 判断是否是引用值
                         //  2 判断是对象还是数组
 
 
+                       //   老师的正确答案
+                       
+                        // function deepClone(origin,target){
+                        //     var target = target || {},
+                        //     toStr = Object.prototype.toString,
+                        //     arrStr = "[object Array]";
+                        //     for(var prop in origin){
+                        //         if(origin[prop] !== "null" && typeof(origin[prop]) == "object"){
+                        //             if(toStr.call(origin[prop]) == arrStr){
+                        //                 target[prop] = [];
+                        //             }else{
+                        //                 target[prop] = {};
+                        //             }
+                        //             deepClone(origin[prop],target[prop]);
+                        //         }else{
+                        //             target[prop] = origin[prop]
+                        //         }
+                        //     }
+                        //     return target;
+                        // }
+                        // deepClone(obj,obj1)
 
 // function test(){
 //     this.age = 1;
