--- a/dailystudy/8.26/vertical-align.html
+++ b/dailystudy/8.26/vertical-align.html
@@ -7,17 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="box-sizing: border-box;border: 1px red solid;width: 100%;height: 100px;">
+    <!-- <div style="box-sizing: border-box;border: 1px red solid;width: 100%;height: 100px;">
         <span style="display:inline-block;font-size:18px;width: 60%;vertical-align:middle;">
            暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗幽暗
         </span>
         <span style="display:inline-block;width:30%;vertical-align:middle;box-sizing: border-box;border: 1px red solid;">
             ajaoe
         </span>
-    </div>
-    <!-- <div>
+    </div> -->
+    <div>
         <span style="box-sizing: border-box;border: 1px red solid;display: inline-block;width: 70%;vertical-align:middle;padding:0 10%;">埃及偶发安慰奖额覅偶安慰法加我配偶几个埃及偶发安慰奖额覅偶安慰法加我配偶几个埃及偶发安慰奖额覅偶安慰法加我配偶几个埃及偶发安慰奖额覅偶安慰法加我配偶几个埃及偶发安慰奖额覅偶安慰法加我配偶几个</span>
         <span><img src="img/001.jpg" alt="图片" style="display:inline-block;width: 10%;vertical-align:middle;box-sizing: border-box;border: 1px red solid;"></span>
-    </div> -->
+    </div>
 </body>
 </html>
