--- a/dailystudy/9.22/this.html
+++ b/dailystudy/9.22/this.html
@@ -462,10 +462,18 @@
                                 //   数组的splice方法
                                 // 第几位开始，截取多少的长度，在切口处添加新的数组
                                 
-                                var arr = [1,2,45,6];
+                                // var arr = [1,2,45,6];
                                 // arr.splice(1,2,3,4,5)// 从第一位开始，截取2位长度，然后从切口处放置3,4,5
                                 // arr.splice(3,0,5)//   [1, 2, 45, 4, 6]
                                 // arr.splice(-1,1)// [1,2,45]
+
+
+                                // 模拟splice方法中的倒数第一位为-1；
+                                // splice = function(pos){
+                                //     pos += pos > 0 ? 0 :this.length;
+                                // }
+                                // -1 = -1 + 4
+
     </script>
 </body>
 </html>
