--- a/dailystudy/9.22/this.html
+++ b/dailystudy/9.22/this.html
@@ -557,10 +557,36 @@
 
                                 //    数组的slice方法
 
-                                var arr = [1,2,34];
-                                //   从该位开始截取，截取3位，不写就截取到后面的
-                                arr.slice(1,3)
+                                // var arr = [1,2,34];
+                                //   从该位开始截取，截取到第几位，不写就截取到后面的
+                                // arr.slice(1,2)
                                 
+
+
+
+                                    //   数组的join方法
+                                    //   arr.join("a"),将数组以参数a连接成字符串，不传参就按照  ， 连接
+                                    // var arr = [1,2,3,4];
+                                    // //    split()    是 string 的方法
+                                    // //     将 split("a")中的参数当做切口切掉，最后形成数组
+                                    // var str = "1243546";
+                                    // str.split("4")// ["12", "35", "6"]     
+
+
+
+
+
+
+                                    // 题目  将下列字符串连接起来
+
+                                    // var str = "sgeo";
+                                    // var str1  = "ajwfeo"
+                                    // var str2 = "afjweo";
+                                    // var arr = [str,str1,str2];
+                                    // arr.join("");//  "sgeoajwfeoafjweo"
+
+
+                                    
 
 
     </script>
