--- a/dailystudy/8.26/typeof.html
+++ b/dailystudy/8.26/typeof.html
@@ -79,7 +79,7 @@
 
 // var n = "abc";
 // m = Number(n);
-// console.log(m);
+// console.log(m);//NaN
 // alert(typeof(a));//undefined
 // alert(typeof(undefined));//undefined
 // alert(typeof(NaN));//number
