--- a/dailystudy/9.5/bibao.html
+++ b/dailystudy/9.5/bibao.html
@@ -62,6 +62,24 @@
 //     myArr[0]();//   101
 //     myArr[1]();//  100
 
+
+//   当函数执行完，执行上下文就会被删除
+
+    // function test(){
+    //     var a = 123;
+    //     function b(){
+    //         a++;
+    //         console.log(a);
+    //     }
+    //     console.log("a" + a);
+    //     return b
+    // }
+    // var result = test();
+    // result();
+    // result();
+
+
+
 //        3
 
 // function eater (){
@@ -146,8 +164,6 @@
 // for(var j = 0; j < 10; j ++){
 //     myArr[j]();
 // }
-
-
 
 
 
