--- a/dailystudy/9.2/zuoyoungyu.html
+++ b/dailystudy/9.2/zuoyoungyu.html
@@ -34,16 +34,16 @@
 // }
 // test();
 
-function a(){
-    var num = 100;
-    function b(){
-        num ++;
-        console.log(num);
-    }
-b()
-}
+// function a(){
+//     var num = 100;
+//     function b(){
+//         num ++;
+//         console.log(num);
+//     }
+// b()
+// }
 
-a();
+// a();
 
 
 
